--- a/pom.xml
+++ b/pom.xml
@@ -4,5 +4,5 @@
   <artifactId>spring-boot-1</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>spring-boot-1</name>
-  <description>spring-boot-1</description>
+  <description>spring-boot-1 1</description>
 </project>
